--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,11 @@
 	margin: 15px auto;
 }
 
-div.dt-searchPane div.dataTables_length{
+div.dt-searchPane div.dataTables_length {
 	float: none;
 	text-align: center;
+}
+
+.modal-body {
+	overflow-x: auto;
 }
